# libodata

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
examples/: attribute-filename.xml  attributes.xml  classes.xml  deletedproducts.xml  list.xml  manifest.xml  nodes.xml  products.xml  search.xml  sentinel-1.data  sentinel-2.data  sentinel-3.data  test.cfg  testmanifest.xml  xfdumanifest.xml
include/odata/: Connection.h  DataHub.h  DataHubConnection.h  DataHubException.h  FileSystemNode.h
modules/: FindBerkeleyDB.cmake
src/: Archive.cpp  Archive.h  BerkeleyDBStorage.cpp  BerkeleyDBStorage.h  CachedStorage.cpp  CachedStorage.h  Config.cpp  Config.h  Connection.cpp  Connection.h  DataHub.cpp  DataHubConnection.cpp  DataHubException.cpp  Directory.cpp  Directory.h  Entry.cpp  Entry.h  File.cpp  File.h  FileSystemNode.cpp  FileSystemNode.h  FuseAdapter.cpp  FuseAdapter.h  LRUCache.h  PathBuilder.cpp  PathBuilder.h  PathSerializer.h  Product.cpp  Product.h  ProductAttribute.h  ProductFile.h  ProductPath.cpp  ProductPath.h  ProductPlaceHolder.cpp  ProductPlaceHolder.h  ProductStorage.cpp  ProductStorage.h  RemoteFile.cpp  RemoteFile.h  ScopeGuard.h  (+13 more)
test/: BerkeleyDBStorageTest.cpp  CachedStorageTest.cpp  ConfigTest.cpp  DataHubTest.cpp  DirectoryTest.cpp  FileSystemNodeTest.cpp  FileTest.cpp  LRUCacheTest.cpp  MockConnection.cpp  MockConnection.h  MockStorage.cpp  MockStorage.h  PathBuilderTest.cpp  ProductPathTest.cpp  ProductPlaceHolderTest.cpp  ProductTest.cpp  RemoteFileTest.cpp  ScopeGuard.h  SearchQueryBuilderTest.cpp  SearchQueryTest.cpp  TemporaryFileTest.cpp  Utils.cpp  Utils.h  XmlParserTest.cpp
